chore(analytics): send absolute URL in 'o' and include ts timestamp; keep debug logs

--- a/web/index.html
+++ b/web/index.html
@@ -75,9 +75,10 @@
       function sendView(url) {
         try {
           var endpoint = '/_vercel/insights/view';
-          // Vercel's /_vercel/insights/view expects a top-level `o` object.
-          // Include both `url` and `u` inside `o` to be resilient to expected shapes.
-          var payloadObj = { o: { url: url || (location.pathname + location.search), u: url || (location.pathname + location.search) } };
+          // Build a full absolute URL (server expects o to be a string starting with http:// or https://)
+          var fullUrl = url ? (new URL(url, location.origin)).href : location.href;
+          // Use the minimal shape server expects: o = full url string, ts = timestamp
+          var payloadObj = { o: fullUrl, ts: Date.now() };
           var payload = JSON.stringify(payloadObj);
           console.debug('[Vercel Analytics] sendView ->', payload);
           if (navigator.sendBeacon) {
@@ -116,7 +117,7 @@
             var img = new Image(1,1);
             img.onload = function(){ console.debug('[Vercel Analytics] image GET succeeded'); };
             img.onerror = function(){ console.debug('[Vercel Analytics] image GET failed'); };
-            img.src = endpoint + '?url=' + encodeURIComponent(url || (location.pathname + location.search));
+            img.src = endpoint + '?url=' + encodeURIComponent(fullUrl);
           } catch (e) { console.debug('[Vercel Analytics] image fallback error', e); }
         } catch (e) {
           // silent
@@ -134,6 +135,7 @@
         try {
           var newUrl = arguments[2] || (location.pathname + location.search);
           console.debug('[Vercel Analytics] pushState ->', newUrl);
+          // sendView will resolve relative URLs to absolute
           sendView(newUrl);
         } catch (e) { console.debug('[Vercel Analytics] pushState error', e); }
         return ret;
